Set background palette and fix link contrast jloh/bulma-prefers-dark#31

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,6 @@
 @import "~bulma/bulma";
+$blue-light: hsl(209, 71%, 63%); // https://github.com/jloh/bulma-prefers-dark/issues/31
+$link-dark: $blue-light;
 @import "~bulma-prefers-dark/bulma-prefers-dark";
 
 html {
